--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     top:0;
     left:10px;
     padding-top: 300px;
+    height: 100%;
 }
 .c1 li{
     list-style-position: inside;
@@ -19,24 +20,22 @@
 .c1 ul{
     padding-left: 0;
 }
-.c1 img{
-    display: inline;
-    width:20px;
-    position: absolute;
-}
 .body{
     margin-left: auto;
     margin-right: auto;
     width:300px;
     text-align: left;
+
 }
 .c2{
-    width:500px;
+    width:50%;
+    background-color: bisque;
     color:black;
     top:0;
-    right:100px;
+    left:50%;
     position: absolute;
     padding-top:300px ;
+    height: 100%;
 }
 .c2 .head{
     color:white;
@@ -47,13 +46,13 @@
     position: relative;
     display: flex;
     background-color:rgb(22, 1, 255);
-    margin-top:50px; 
-    height: 230px;
+    margin-top:70px; 
+    height: 250px;
     color: white;
     align-items: center;
+    width:100%;
     /*justify-content: center;*/
-    padding: 20px;
-    gap:20px;
+
 }
 .name{
     text-transform: uppercase;
@@ -66,7 +65,7 @@
     margin-bottom: 0;
 }
 .name h1{
-    font-size: 100px;
+    font-size: 80px;
     margin: 0;
     
 }
@@ -74,15 +73,15 @@
     margin: 0;
 }
 .c3 img{
-    margin-left:300px;
-    height: 350px;
+    margin-left:20%;
+    height:150%;
     border-radius: 50%;
     border:5px solid blue;
 }
 .head{
     margin-left: auto;
     margin-right: auto;
-    width :250px;
+    width :40%;
     border:5px solid blue;
     border-radius: 20px;
     text-align: center;
@@ -94,5 +93,46 @@ a:hover{
     color: red;
 }
 .c1,.c2{
+    display: flex;
     padding-top: 400px;
+    flex-direction: column;
+    max-width: 1000px;
+}
+@media (max-width:768px){
+    .cont{
+        display:flex;
+        text-align: center;
+        flex-direction: column;
+
+    }
+    .head{
+        width:50%;
+    }
+    .cont p,li{
+        font-size: 16px;
+    }
+    .cont h2{
+        font-size: 18px;
+    }
+    .cont h1{
+        font-size: 20px;
+    }
+    .c1,.c2{
+        
+        width: 50%;
+    }
+    .c3{
+        height:200px;
+        width:100%;
+    }
+    .c3 img{
+        margin-left: 0;
+        height: 100%;
+    }
+    .name h1{
+        font-size: 200%;
+    }
+    .name h3{
+        font-size: 30%;
+    }
 }
